fix header alignment

--- a/menu1.css
+++ b/menu1.css
@@ -30,7 +30,7 @@ html, body {
 header {
 	display: flex;
 	flex-direction: row;
-	align-items: flex-end;
+	align-items: center;
 	justify-content: space-between;
 	background-color: var(--primary);
 	color: var(--light);
